bk_ida/gccida/c1/copy_to_reg
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_to_reg/src/explow.c:1139:21: error: use of undeclared identifier 'machine_mode'
v2 = gen_reg_rtx( ( machine_mode)*( ( unsigned __int8 *)x + 2)); 
                    ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_to_reg/src/obj/explow.o] Error 1
